--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -12,7 +12,7 @@
     "scene": {
         "renderer":{
             "sky": "assets/textures/sky.jpg",
-            "postprocess": "assets/shaders/postprocess/vignette.frag"
+            "postprocess": "assets/shaders/postprocess/film-grain.frag"
         },
         "assets":{
             "shaders":{
@@ -30,13 +30,16 @@
                 "grass": "assets/textures/grass_ground_d.jpg",
                 "wood": "assets/textures/wood.jpg",
                 "glass": "assets/textures/glass-panels.png",
-                "monkey": "assets/textures/monkey.png"
+                "monkey": "assets/textures/monkey.png",
+                "road": "assets/textures/road.jfif",
+                "finish": "assets/textures/finishLine.jpg"
             },
             "meshes":{
                 "cube": "assets/models/cube.obj",
                 "monkey": "assets/models/monkey.obj",
                 "plane": "assets/models/plane.obj",
-                "sphere": "assets/models/sphere.obj"
+                "sphere": "assets/models/sphere.obj",
+                "car": "assets/models/car.obj"
             },
             "samplers":{
                 "default":{},
@@ -56,7 +59,20 @@
                             "enabled": true
                         }
                     },
-                    "tint": [0.45, 0.4, 0.5, 1]
+                    "tint": [0.75, 0.75, 0.75, 1]
+                },
+                "blueMetal":{
+                    "type": "tinted",
+                    "shader": "tinted",
+                    "pipelineState": {
+                        "faceCulling":{
+                            "enabled": false
+                        },
+                        "depthTesting":{
+                            "enabled": true
+                        }
+                    },
+                    "tint": [0, 0, 1, 1]
                 },
                 "glass":{
                     "type": "textured",
@@ -95,6 +111,36 @@
                     "texture": "grass",
                     "sampler": "default"
                 },
+                "road":{
+                    "type": "textured",
+                    "shader": "textured",
+                    "pipelineState": {
+                        "faceCulling":{
+                            "enabled": false
+                        },
+                        "depthTesting":{
+                            "enabled": true
+                        }
+                    },
+                    "tint": [1, 1, 1, 1],
+                    "texture": "road",
+                    "sampler": "default"
+                },
+                "finish":{
+                    "type": "textured",
+                    "shader": "textured",
+                    "pipelineState": {
+                        "faceCulling":{
+                            "enabled": false
+                        },
+                        "depthTesting":{
+                            "enabled": true
+                        }
+                    },
+                    "tint": [1, 1, 1, 1],
+                    "texture": "finish",
+                    "sampler": "default"
+                },
                 "monkey":{
                     "type": "textured",
                     "shader": "textured",
@@ -129,7 +175,7 @@
         },
         "world":[
             {
-                "position": [0, 0, 10],
+                "position": [0, 0, 20],
                 "components": [
                     {
                         "type": "Camera"
@@ -140,119 +186,208 @@
                 ],
                 "children": [
                     {
-                        "position": [1, -1, -1],
-                        "rotation": [45, 45, 0],
-                        "scale": [0.1, 0.1, 1.0],
+                        "name": "monkey",
+                        "position": [0, -1, -3],
+                        "rotation": [0, 180, 0],
+                        "scale": [0.6, 0.6, 0.6],
                         "components": [
                             {
                                 "type": "Mesh Renderer",
-                                "mesh": "cube",
+                                "mesh": "monkey",
                                 "material": "metal"
+                            },
+                            {
+                                "type": "Collision",
+                                "radius": 1.2,
+                                "center": [0, 0, 0]
                             }
                         ]
                     }
                 ]
             },
             {
-                "rotation": [-45, 0, 0],
-                "components": [
-                    {
-                        "type": "Mesh Renderer",
-                        "mesh": "monkey",
-                        "material": "monkey"
-                    },
-                    {
-                        "type": "Movement",
-                        "linearVelocity": [0, 0.1, 0],
-                        "angularVelocity": [0, 45, 0]
-                    }
-                ]
-            },
-            {
                 "position": [0, -1, 0],
                 "rotation": [-90, 0, 0],
-                "scale": [10, 10, 1],
+                "scale": [10, 20, 1],
                 "components": [
                     {
                         "type": "Mesh Renderer",
                         "mesh": "plane",
-                        "material": "grass"
+                        "material": "road"
                     }
                 ]
             },
             {
-                "position": [0, 1, 2],
-                "rotation": [0, 0, 0],
-                "scale": [2, 2, 2],
+                "position": [0, -1, -25],
+                "rotation": [-90, 0, 0],
+                "scale": [10, 5, 1],
                 "components": [
                     {
                         "type": "Mesh Renderer",
                         "mesh": "plane",
-                        "material": "glass"
+                        "material": "finish"
                     }
                 ]
             },
             {
-                "position": [0, 1, -2],
-                "rotation": [0, 0, 0],
-                "scale": [2, 2, 2],
+                "name": "car",
+                "position": [3, -1, 15],
+                "rotation": [0, 180, 0],
+                "scale": [0.009, 0.009, 0.003],
                 "components": [
                     {
                         "type": "Mesh Renderer",
-                        "mesh": "plane",
-                        "material": "glass"
-                    }
-                ]
-            },
-            {
-                "position": [2, 1, 0],
-                "rotation": [0, 90, 0],
-                "scale": [2, 2, 2],
-                "components": [
-                    {
-                        "type": "Mesh Renderer",
-                        "mesh": "plane",
-                        "material": "glass"
-                    }
-                ]
-            },
-            {
-                "position": [-2, 1, 0],
-                "rotation": [0, 90, 0],
-                "scale": [2, 2, 2],
-                "components": [
-                    {
-                        "type": "Mesh Renderer",
-                        "mesh": "plane",
-                        "material": "glass"
-                    }
-                ]
-            },
-            {
-                "position": [0, 3, 0],
-                "rotation": [90, 0, 0],
-                "scale": [2, 2, 2],
-                "components": [
-                    {
-                        "type": "Mesh Renderer",
-                        "mesh": "plane",
-                        "material": "glass"
-                    }
-                ]
-            },
-            {
-                "position": [0, 10, 0],
-                "rotation": [45, 45, 0],
-                "scale": [5, 5, 5],
-                "components": [
-                    {
-                        "type": "Mesh Renderer",
-                        "mesh": "sphere",
-                        "material": "moon"
+                        "mesh": "car",
+                        "material": "blueMetal"
                     },
                     {
-                        "type": "Movement",
-                        "angularVelocity": [0, 90, 0]
+                        "type": "Collision",
+                        "radius": 8,
+                        "center": [0.3, 0, -0.5]
+                    }
+                ]
+            },
+            {
+                "name": "car",
+                "position": [-3, -1, 10],
+                "rotation": [0, 180, 0],
+                "scale": [0.009, 0.009, 0.003],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "car",
+                        "material": "blueMetal"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 8,
+                        "center": [0.3, 0, -0.5]
+                    }
+                ]
+            },
+            {
+                "name": "car",
+                "position": [-3, -1, 5],
+                "rotation": [0, 180, 0],
+                "scale": [0.009, 0.009, 0.003],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "car",
+                        "material": "blueMetal"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 8,
+                        "center": [0.3, 0, -0.5]
+                    }
+                ]
+            },
+            {
+                "name": "car",
+                "position": [0, -1, 1],
+                "rotation": [0, 180, 0],
+                "scale": [0.009, 0.009, 0.003],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "car",
+                        "material": "blueMetal"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 8,
+                        "center": [0.3, 0, -0.5]
+                    }
+                ]
+            },
+            {
+                "name": "car",
+                "position": [3, -1, -1],
+                "rotation": [0, 180, 0],
+                "scale": [0.009, 0.009, 0.003],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "car",
+                        "material": "blueMetal"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 8,
+                        "center": [0.3, 0, -0.5]
+                    }
+                ]
+            },
+            {
+                "name": "car",
+                "position": [1, -1, -1],
+                "rotation": [0, 180, 0],
+                "scale": [0.009, 0.009, 0.003],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "car",
+                        "material": "blueMetal"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 8,
+                        "center": [0.3, 0, -0.5]
+                    }
+                ]
+            },
+            {
+                "name": "car",
+                "position": [-3, -1, -3],
+                "rotation": [0, 180, 0],
+                "scale": [0.009, 0.009, 0.003],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "car",
+                        "material": "blueMetal"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 8,
+                        "center": [0.3, 0, -0.5]
+                    }
+                ]
+            },
+            {
+                "name": "car",
+                "position": [-5, -1, -3],
+                "rotation": [0, 180, 0],
+                "scale": [0.009, 0.009, 0.003],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "car",
+                        "material": "blueMetal"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 8,
+                        "center": [0.3, 0, -0.5]
+                    }
+                ]
+            },
+            {
+                "name": "car",
+                "position": [5, -1, -1],
+                "rotation": [0, 180, 0],
+                "scale": [0.009, 0.009, 0.003],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "car",
+                        "material": "blueMetal"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 8,
+                        "center": [0.3, 0, -0.5]
                     }
                 ]
             }
