--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -61,6 +61,19 @@
                     },
                     "tint": [0.75, 0.75, 0.75, 1]
                 },
+                "gold":{
+                    "type": "tinted",
+                    "shader": "tinted",
+                    "pipelineState": {
+                        "faceCulling":{
+                            "enabled": false
+                        },
+                        "depthTesting":{
+                            "enabled": true
+                        }
+                    },
+                    "tint": [1.0, 0.843, 0.0, 1]
+                },
                 "blueMetal":{
                     "type": "tinted",
                     "shader": "tinted",
@@ -388,6 +401,96 @@
                         "type": "Collision",
                         "radius": 8,
                         "center": [0.3, 0, -0.5]
+                    }
+                ]
+            },
+            {
+                "name": "coin",
+                "position": [0, 0, 7],
+                "rotation": [0, 180, 0],
+                "scale": [0.3, 0.5, 0.5],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "sphere",
+                        "material": "gold"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 1,
+                        "center": [0, 0, 0]
+                    }
+                ]
+            },
+            {
+                "name": "coin",
+                "position": [-3, 0, 2],
+                "rotation": [0, 180, 0],
+                "scale": [0.3, 0.5, 0.5],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "sphere",
+                        "material": "gold"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 1,
+                        "center": [0, 0, 0]
+                    }
+                ]
+            },
+            {
+                "name": "coin",
+                "position": [0, 0, 10],
+                "rotation": [0, 180, 0],
+                "scale": [0.3, 0.5, 0.5],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "sphere",
+                        "material": "gold"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 1,
+                        "center": [0, 0, 0]
+                    }
+                ]
+            },
+            {
+                "name": "coin",
+                "position": [8, 0, -15],
+                "rotation": [0, 180, 0],
+                "scale": [0.3, 0.5, 0.5],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "sphere",
+                        "material": "gold"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 1,
+                        "center": [0, 0, 0]
+                    }
+                ]
+            },
+            {
+                "name": "coin",
+                "position": [4, 0, -7],
+                "rotation": [0, 180, 0],
+                "scale": [0.3, 0.5, 0.5],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "sphere",
+                        "material": "gold"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 1,
+                        "center": [0, 0, 0]
                     }
                 ]
             }
