--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -16,10 +16,6 @@
         },
         "assets":{
             "shaders":{
-                "lit-textured": {
-                    "vs": "assets/shaders/lit-texture.vert",
-                    "fs": "assets/shaders/lit-texture.frag"
-                },
                 "tinted":{
                     "vs":"assets/shaders/tinted.vert",
                     "fs":"assets/shaders/tinted.frag"
@@ -36,14 +32,7 @@
                 "glass": "assets/textures/glass-panels.png",
                 "monkey": "assets/textures/monkey.png",
                 "road": "assets/textures/road.jfif",
-                "finish": "assets/textures/finishLine.jpg",
-                "albedo" : "assets/textures/tex/albedo.jpg",
-                "ambientOcclusion" : "assets/textures/tex/ambient_occlusion.jpg",
-                "emissive" : "assets/textures/tex/emissive.jpg",
-                "roughness": "assets/textures/tex/roughness.jpg",
-                "specular": "assets/textures/tex/specular.jpg" ,
-                "white" :"assets/textures/tex/white.png",
-                "gray": "assets/textures/tex/metallic.jpg"
+                "finish": "assets/textures/finishLine.jpg"
             },
             "meshes":{
                 "cube": "assets/models/cube.obj",
@@ -59,44 +48,6 @@
                 }
             },
             "materials":{
-                "lit-car":{
-                    "type": "lit",
-                    "shader": "lit-textured",
-                    "pipelineState": {
-                        "faceCulling":{
-                            "enabled": false
-                        },
-                        "depthTesting":{
-                            "enabled": true
-                        }
-                    },
-                    "tint": [0.45, 0.4, 0.5, 1],
-                    "albedo-tex": "gray",
-                    "specular-tex": "white",
-                    "roughness-tex": "roughness",
-                    "ao-tex": "gray",
-                    "emission-tex": "emissive",
-                    "sampler": "default"
-                },
-                "lit-car2":{
-                    "type": "lit",
-                    "shader": "lit-textured",
-                    "pipelineState": {
-                        "faceCulling":{
-                            "enabled": false
-                        },
-                        "depthTesting":{
-                            "enabled": true
-                        }
-                    },
-                    "tint": [1, 0, 0, 1],
-                    "albedo-tex": "gray",
-                    "specular-tex": "white",
-                    "roughness-tex": "roughness",
-                    "ao-tex": "gray",
-                    "emission-tex": "emissive",
-                    "sampler": "default"
-                },
                 "metal":{
                     "type": "tinted",
                     "shader": "tinted",
@@ -109,6 +60,19 @@
                         }
                     },
                     "tint": [0.75, 0.75, 0.75, 1]
+                },
+                "gold":{
+                    "type": "tinted",
+                    "shader": "tinted",
+                    "pipelineState": {
+                        "faceCulling":{
+                            "enabled": false
+                        },
+                        "depthTesting":{
+                            "enabled": true
+                        }
+                    },
+                    "tint": [1.0, 0.843, 0.0, 1]
                 },
                 "blueMetal":{
                     "type": "tinted",
@@ -231,48 +195,25 @@
                     },
                     {
                         "type": "Free Camera Controller"
-                    },
-                    {
-                        "type":"Light",
-                        "typeOfLight":"directional",
-                        //for directional light: only the diffuse and specular are given in the json file
-                        "diffuse":[0,1,0],
-                        "specular":[0,1,0]
                     }
-                    //2- the point light
-                    // {
-                    //     "type": "Light",
-                    //     "typeOfLight": "spot",
-                    //     "diffuse": [0, 0, 1],
-                    //     "specular": [0, 0, 1],
-                    //     "attenuation": [0.001, 0.001, 0.0001]
-
-                    // }
                 ],
                 "children": [
                     {
-                        "name": "player",
-                        "position": [-0.2, -1.05, -3],
+                        "name": "monkey",
+                        "position": [0, -1, -3],
                         "rotation": [0, 180, 0],
-                        "scale": [0.009, 0.009, 0.003],
+                        "scale": [0.6, 0.6, 0.6],
                         "components": [
                             {
                                 "type": "Mesh Renderer",
-                                "mesh": "car",
-                                "material": "lit-car"
+                                "mesh": "monkey",
+                                "material": "metal"
                             },
                             {
                                 "type": "Collision",
                                 "radius": 1.2,
                                 "center": [0, 0, 0]
-                            } 
-                            // {
-                            //     "type": "Light",
-                            //     "lightType": "point",
-                            //     "diffuse": [1, 1, 1],
-                            //     "specular": [0.0, 0, 0.0],
-                            //     "attenuation": [ 0, 0, 0.5 ]
-                            // }  
+                            }
                         ]
                     }
                 ]
@@ -310,14 +251,13 @@
                     {
                         "type": "Mesh Renderer",
                         "mesh": "car",
-                        "material": "lit-car"
+                        "material": "blueMetal"
                     },
                     {
                         "type": "Collision",
                         "radius": 8,
                         "center": [0.3, 0, -0.5]
                     }
-                    
                 ]
             },
             {
@@ -461,6 +401,96 @@
                         "type": "Collision",
                         "radius": 8,
                         "center": [0.3, 0, -0.5]
+                    }
+                ]
+            },
+            {
+                "name": "coin",
+                "position": [0, 0, 7],
+                "rotation": [0, 180, 0],
+                "scale": [0.3, 0.5, 0.5],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "sphere",
+                        "material": "gold"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 0.5,
+                        "center": [0, 0, 0]
+                    }
+                ]
+            },
+            {
+                "name": "coin",
+                "position": [-3, 0, 2],
+                "rotation": [0, 180, 0],
+                "scale": [0.3, 0.5, 0.5],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "sphere",
+                        "material": "gold"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 0.5,
+                        "center": [0, 0, 0]
+                    }
+                ]
+            },
+            {
+                "name": "coin",
+                "position": [0, 0, 10],
+                "rotation": [0, 180, 0],
+                "scale": [0.3, 0.5, 0.5],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "sphere",
+                        "material": "gold"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 0.5,
+                        "center": [0, 0, 0]
+                    }
+                ]
+            },
+            {
+                "name": "coin",
+                "position": [8, 0, -15],
+                "rotation": [0, 180, 0],
+                "scale": [0.3, 0.5, 0.5],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "sphere",
+                        "material": "gold"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 0.5,
+                        "center": [0, 0, 0]
+                    }
+                ]
+            },
+            {
+                "name": "coin",
+                "position": [4, 0, -7],
+                "rotation": [0, 180, 0],
+                "scale": [0.3, 0.5, 0.5],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "sphere",
+                        "material": "gold"
+                    },
+                    {
+                        "type": "Collision",
+                        "radius": 0.5,
+                        "center": [0, 0, 0]
                     }
                 ]
             }
